--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"No tests configured\""
   },
   "dependencies": {
-    "firebase": "^10.7.0",
+    "dotenv": "^17.2.1",
+    "firebase": "^10.14.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
